--- a/03_RequestsHandlingInDjango/board/advertisements/templates/advertisements/advertisement_list.html
+++ b/03_RequestsHandlingInDjango/board/advertisements/templates/advertisements/advertisement_list.html
@@ -1,7 +1,9 @@
 <html>
 <ul>
-    <li>Мастер на час</li>
-    <li>Выведение из запоя</li>
-    <li>Услуги экскаватора-погрузчика, гидромолота, ямобура</li>
+    {% for advertisement in advertisements_dict %}
+    <li>{{advertisement}}</li>
+    {% endfor %}
+
+    {{advertisements_1}}
 </ul>
 </html>
