--- a/03_RequestsHandlingInDjango/board/advertisements/templates/advertisements/advertisement_list.html
+++ b/03_RequestsHandlingInDjango/board/advertisements/templates/advertisements/advertisement_list.html
@@ -1,9 +1,15 @@
 <html>
-<ul>
-    {% for advertisement in advertisements_dict %}
-    <li>{{advertisement}}</li>
-    {% endfor %}
 
-    {{advertisements_1}}
+<title>{{title}}</title>
+<h3>{{counter}}</h3>
+<ul>
+    {%for advertisement in advertisements%}
+    <li>{{advertisement}}</li>
+    {%endfor%}
+
 </ul>
+<{{text_fild}}/>
+<{{button}}/>
+<a>{{button_name}}</a>
+
 </html>
