--- a/04_DatabasesAndModels/board/advertisements_app/templates/advertisements/home_page.html
+++ b/04_DatabasesAndModels/board/advertisements_app/templates/advertisements/home_page.html
@@ -2,5 +2,5 @@
 <meta charset="utf-8">
 <title>Главная страница</title>
 <h3>Главная страница</h3>
-
+<a href="advertisements">Ссылка на список</a>
 </html>
