--- a/05_Forms/news/app_news/templates/news/change.html
+++ b/05_Forms/news/app_news/templates/news/change.html
@@ -5,7 +5,7 @@
     <title>Редактирование</title>
 </head>
 <body>
-    <h2>Редактировать форму</h2>
+    <h2>Редактировать новость</h2>
     <form method="post" action="change">
     {% csrf_token %}
     {{ news_form.as_p }}
