--- a/05_Forms/news/app_news/templates/news/news_list.html
+++ b/05_Forms/news/app_news/templates/news/news_list.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Список статей</title>
+    <title>Cписок всех новостей</title>
 </head>
 <body>
     <h2>Оглавление</h2>
