--- a/05_Forms/news/app_news/templates/news/news_detail.html
+++ b/05_Forms/news/app_news/templates/news/news_detail.html
@@ -17,12 +17,28 @@
         Дата создания: {{object.created_news}}<br>
         Дата редактирования: {{object.update_news}}<br>
         Количество просмотров: {{object.views_count}}
+
     </p>
 
+    {% if object.сomment_news %}
+        <p>Комментарий</p>
+
+
+        {% for comment in object.сomment_news.all %}
+        Комментарий к новости: {{comment.body}}<br>
+        {% endfor %}
+
+        <form method="post" action="{{messages.id}}">
+            {% csrf_token %}
+            {{ form.as_p }}<br>
+            <button type="submit">Добавить</button>
+        </form>
+
+    {% else %}
+
     <form method="get" action="{{news.id}}/change">
-        {% csrf_token %}
-        {{ news_form.as_p }}
         <button type="submit">Редактировать</button>
     </form>
+    {% endif %}
 </body>
 </html>
