--- a/05_Forms/news/app_news/templates/news/news_home_page.html
+++ b/05_Forms/news/app_news/templates/news/news_home_page.html
@@ -9,6 +9,7 @@
   <p>
       <a href="news_list">Новости</a><br>
       <a href="news_list/edit">Создать новость</a><br>
+      <a href="news_list/change_news_list">Редактировать новости</a><br>
   </p>
 </body>
 </html>
