--- a/05_Forms/news/app_news/templates/news/change_news_list.html
+++ b/05_Forms/news/app_news/templates/news/change_news_list.html
@@ -11,7 +11,7 @@
         {% for news in object_list %}
         <li>
             <p>
-                <a href="/news_list/{{news.id}}"> {{news}}</a>
+                {{news}}
             </p>
             <form method="get" action="{{news.id}}/change">
             <button type="submit">Редактировать</button>
