--- a/06_AdminInterface/news/app_news/templates/news/list_news.html
+++ b/06_AdminInterface/news/app_news/templates/news/list_news.html
@@ -12,6 +12,9 @@
     <li>
         <a href="news/new_news">Добавить новость</a>
     </li>
+    <li>
+        <a href="comment_list">Удалить комментарий</a>
+    </li>
 </ul>
 </body>
 </html>
