--- a/08_RegistrationAndAuthorization/djregistration/registration_user/templates/news/registration_logout.html
+++ b/08_RegistrationAndAuthorization/djregistration/registration_user/templates/news/registration_logout.html
@@ -5,7 +5,7 @@
     <title>Страница выхода</title>
 </head>
 <body>
-    <p>Вы успешно вышли! Досвидания {{request.user}}!</p>
+    <p>Вы успешно вышли! Досвидания!</p>
     <form method="get" action='\'>
         <button type="submit">На страницу регистрации</button>
     </form>
