--- a/08_RegistrationAndAuthorization/djregistration/registration_user/templates/news/update_user.html
+++ b/08_RegistrationAndAuthorization/djregistration/registration_user/templates/news/update_user.html
@@ -8,6 +8,7 @@
     <h3>Редактировать профиль:</h3>
         <form method="post">
             {% csrf_token %}
+            <h4><em>{{no_valid}}</em></h4>
             {% if user_superuser_flag %}
                 <p>Имя пользователя - {{ user_form.username }}</p>
                 <p>Фамилия пользователя - {{ user_form.last_name }}</p>
